bad/incr_null.example_compiler_output
ERROR
[1mbad/incr_null.lat:4:6: [1;31merror: [0;1mexpression is not assignable[m
	null++;
	    [1;32m^[m
[1mbad/incr_null.lat:4:2: [1;34mnote: [0;1mexpression starts here[m
	null++;
	[1;32m^[m
